feat: :sparkles: 1. 添加不同的应用场景使用不同的文件

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "计算工具库",
   "main": "dist/calc.umd.js",
   "module": "dist/calc.es.js",
+  "browser": "dist/calc.umd.js",
+  "unpkg": "dist/calc.umd.js",
   "files": [
     "dist/*"
   ],
