--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "clear": "rimraf package-lock.json && rimraf node_modules",
     "test": "vitest --ui --coverage",
     "devExample": "npm --prefix ./example run dev",
-    "buildExample": "npm --prefix ./example run build"
+    "buildExample": "npm --prefix ./example run build",
+    "prepare": "husky"
   },
   "keywords": [
     "javascript",
@@ -38,32 +39,27 @@
   },
   "homepage": "https://github.com/dayney/fe-calc#readme",
   "devDependencies": {
-    "@commitlint/config-conventional": "^19.2.2",
+    "@commitlint/cli": "^17.8.1",
+    "@commitlint/config-conventional": "^17.8.1",
+    "@rollup/rollup-darwin-arm64": "^4.19.2",
     "@types/decimal.js": "^7.4.0",
     "@vitest/coverage-v8": "^2.0.4",
     "@vitest/ui": "^2.0.4",
     "commitizen": "^4.3.0",
     "commitlint": "^19.3.0",
     "cz-git": "^1.9.4",
-    "husky": "^9.1.4",
+    "husky": "^8.0.3",
     "install": "^0.13.0",
     "standard-version": "^9.5.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
     "vite-plugin-dts": "^4.0.0-beta.1",
     "vitest": "^2.0.4",
-    "webpack-cli": "^5.1.4",
-    "yorkie": "^2.0.0"
+    "webpack-cli": "^5.1.4"
   },
   "config": {
     "commitizen": {
       "path": "node_modules/cz-git"
-    }
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged"
     }
   }
 }
